remove responsive mobile

--- a/index.html
+++ b/index.html
@@ -69,10 +69,6 @@
       </div>
     </div>
 
-    <div class="burger-menu" id="burgerMenu">
-      <i class="fas fa-bars"></i>
-    </div>
-
     <div class="playlist-trigger" id="playlistTrigger"></div>
 
     <div class="playlist" id="playlist">
@@ -83,6 +79,15 @@
     </div>
 
     <audio id="audioPlayer" preload="metadata" crossorigin="anonymous"></audio>
+
+    <div class="mobile-warning">
+      <i class="fas fa-exclamation-triangle"></i>
+      <h2>Desktop Experience Required</h2>
+      <p>
+        This music player is designed for desktop use only. Please access this
+        page from a computer for the best experience.
+      </p>
+    </div>
 
     <script src="assets/script.js"></script>
   </body>
