adding preload song

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
     <audio id="audioPlayer" preload="metadata" crossorigin="anonymous"></audio>
 
+    <div id="audioPreloadContainer" style="display: none"></div>
+
     <div class="mobile-warning">
       <i class="fas fa-exclamation-triangle"></i>
       <h2>Desktop Experience Required</h2>
