--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       </p>
     </div>
 
+    <script src="assets/lyrics.js"></script>
     <script src="assets/script.js"></script>
   </body>
 </html>
