--- a/index.html
+++ b/index.html
@@ -26,22 +26,6 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <div class="welcome-overlay">
-      <div class="welcome-container">
-        <div class="album-art-pulse">
-          <div class="vinyl-disc"></div>
-        </div>
-        <h2 class="welcome-title">Harmony</h2>
-        <p class="welcome-subtitle">Ready to play your favorite tunes</p>
-        <div class="wave-loader">
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-        </div>
-      </div>
-      <audio id="welcomeSound" src="assets/audio/interface sfx.mp3"></audio>
-    </div>
-
     <div class="background-blur" id="backgroundBlur"></div>
     <div class="overlay"></div>
 
@@ -94,15 +78,6 @@
     <div class="playlist-trigger" id="playlistTrigger"></div>
 
     <div class="playlist" id="playlist">
-      <div class="playlist-header">
-        <h3>Playlist</h3>
-        <div class="search-container">
-          <input type="text" id="searchInput" placeholder="Search songs..." />
-          <button id="clearSearch" class="control-btn" title="Clear search">
-            <i class="fas fa-times"></i>
-          </button>
-        </div>
-      </div>
       <div id="playlistContainer">
         <div class="loading">Loading music files...</div>
       </div>
@@ -121,7 +96,7 @@
       </p>
     </div>
 
-    <script src="assets/lyrics.js"></script>
+    <script src="assets/lrc-loader.js"></script>
     <script src="assets/script.js"></script>
   </body>
 </html>
